--- a/scoop/templates/scoop/how_it_works.html
+++ b/scoop/templates/scoop/how_it_works.html
@@ -3,7 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>about lunch ladle</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="../../../ll_home/static/ll_home/styles.css">
     </head>
     <body>
         <div class="topnav">
