--- a/ll_home/templates/ll_home/index.html
+++ b/ll_home/templates/ll_home/index.html
@@ -3,15 +3,16 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>lunch ladle</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="../../static/ll_home/styles.css">
     </head>
     <body>
         <div class="topnav">
-                <a href="/lunch_ladle/about.html">About</a>
+                <a href="about.html">About</a>
                 <a href="/scoop/templates/scoop/how_it_works.html">How it Works</a>
                 <a href="/lunch_ladle/testimonials/">Testimonials</a>
                 <a href="/lunch_ladle/blog/">Blog</a>
                 <a href="/lunch_ladle/contact/">Contact Us</a>
+                <a href="reg_log.html">Register / LogIn</a>
         </div>
     </body>
 </html>
