--- a/login_register/templates/login_register/reg_log.html
+++ b/login_register/templates/login_register/reg_log.html
@@ -3,12 +3,12 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>lunch ladle</title>
-        <link rel="stylesheet" type="text/css" href="../../static/ll_home/styles.css">
+        <link rel="stylesheet" type="text/css" href="../../../ll_home/static/ll_home/styles.css">
     </head>
     <body>
         <div class="topnav">
                 <a href="/ll_home">Home</a>
-                <a href="about.html">About</a>
+                <a href="../../../ll_home/templates/ll_home/about.html">About</a>
                 <a href="/scoop/templates/scoop/how_it_works.html">How it Works</a>
                 <a href="/lunch_ladle/testimonials/">Testimonials</a>
                 <a href="/lunch_ladle/blog/">Blog</a>
