--- a/ll_home/templates/ll_home/index.html
+++ b/ll_home/templates/ll_home/index.html
@@ -12,7 +12,7 @@
                 <a href="/lunch_ladle/testimonials/">Testimonials</a>
                 <a href="/lunch_ladle/blog/">Blog</a>
                 <a href="/lunch_ladle/contact/">Contact Us</a>
-                <a href="reg_log.html">Register / LogIn</a>
+                <a href="../../../login_register/templates/login_register/reg_log.html">Register / LogIn</a>
         </div>
     </body>
 </html>
