--- a/scoop/templates/scoop/base_home.html
+++ b/scoop/templates/scoop/base_home.html
@@ -16,7 +16,7 @@
 <body>
     {% block navigation %}
         <div class="topnav">
-                <a href="/">Home</a>
+                <a href="/" id="home">Home</a>
                 <a href="about.html">About</a>
                 <a href="how_it_works.html">How it Works</a>
                 <a href="testimonials.html">Testimonials</a>
@@ -24,6 +24,18 @@
                 <a href="contact.html">Contact Us</a>
                 <a href="reg_log.html">Register / LogIn</a>
         </div>
+    {% endblock %}
+    {% block left_column %}
+    {% endblock %}
+    {% block form_header %}
+    {% endblock %}
+    {% block form %}
+    {% endblock %}
+    {% block form2_header %}
+    {% endblock %}
+    {% block form2 %}
+    {% endblock %}
+    {% block lower_text %}
     {% endblock %}
 
 </body>
