--- a/scoop/templates/scoop/home_templates/reg_log.html
+++ b/scoop/templates/scoop/home_templates/reg_log.html
@@ -3,7 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>lunch ladle</title>
-        <link rel="stylesheet" type="text/css" href="../../static/scoop/styles.css">
+        <link rel="stylesheet" type="text/css" href="../../../static/scoop/styles.css">
 
     </head>
     <body>
