--- a/scoop/templates/scoop/base_user.html
+++ b/scoop/templates/scoop/base_user.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     {% block top_navigation %}
-        {% include 'scoop/top_navigation.html' %}
+        {% include 'scoop/profile_navigation.html' %}
     {% endblock %}
 
     {% block left_column %}{% endblock %}
