"Add item works great!  Put loop in template to add input fields for each ingredient.  Each ingredient is checked against the database, and added if not there already.  Once the ingredient is added to database, it is added to the list of ingredients for the item."

--- a/scoop/templates/scoop/base_user.html
+++ b/scoop/templates/scoop/base_user.html
@@ -38,6 +38,8 @@
 
     {% block lower_text %}{% endblock %}
 
+    {% block sidebar %}{ endblock %}
+
     {% block footer %}
         {% include 'scoop/footer.html' %}
     {% endblock %}
