--- a/scoop/templates/scoop/vendor_templates/scan.html
+++ b/scoop/templates/scoop/vendor_templates/scan.html
@@ -91,7 +91,7 @@
         </span>
         <br>
         <span>
-           Name: {item.item_name}
+           Name: {item.product_name}
         </span>
         <br>
         <br>
