--- a/scoop/templates/scoop/user_templates/profile_home.html
+++ b/scoop/templates/scoop/user_templates/profile_home.html
@@ -14,6 +14,8 @@
             </title>
 </head>
 <body>
+{% block sidebar %}
+{% endblock %}
 {% block lower_text %}
 {% if user.is_authenticated %}
 <p style="margin-top: 100px"></p>
