"New 'add_child' form, still in the works.  Modified ChildProfile."

--- a/scoop/templates/scoop/base_user.html
+++ b/scoop/templates/scoop/base_user.html
@@ -38,7 +38,7 @@
 
     {% block lower_text %}{% endblock %}
 
-    {% block sidebar %}{ endblock %}
+    {% block sidebar %}{% endblock %}
 
     {% block footer %}
         {% include 'scoop/footer.html' %}
